--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
     "phpunit/phpunit": "^9.5"
   },
   "require": {
-    "laravel-arcanist/arcanist": "^0.8"
+    "laravel-arcanist/arcanist": "^0.8|^0.9"
   }
 }
